# C3

./: .gitattributes  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci-lite.yml  pre-release-audit.yml  project-page.yml
c3/: __init__.py  text_sanitize.py
c3/algorithms/: __init__.py  c3.py  magrpo.py  mappo.py  registry.py  utils.py
c3/analysis/: __init__.py  buckets.py  c3_analysis.py  metrics.py  replay.py
c3/credit/: __init__.py
c3/envs/: __init__.py  registry.py
c3/integration/: __init__.py  marl_specs.py  task_datasets.py
c3/mas/: __init__.py  prompt_render.py  role_graph.py  rollout_generator.py
c3/rewards/: base.py  providers.py  registry.py
c3/tools/: __init__.py  analysis_results.py  c3_env_smoke.py  main_results.py  plot_paper_figures.py
c3/utils/: __init__.py  budget_ledger.py  collision_guard.py  context_key.py  paper_train_contract.py
configs/: analysis.yaml  data_manifest.yaml  main_results_registry.yaml
docs/: CHANGES_FROM_OPENRLHF.md  CODE_MAP.md  DATA_SOURCES.md  GETTING_STARTED.md  IMPLEMENTATION_AUDIT.md  IMPLEMENTATION_CHECKLIST.md  RELEASE_CHECKLIST.md  RELEASE_POLICY.md  UPSTREAM.md
project-page/: index.html  script.js  styles.css
tests/: conftest.py  test_main_results.py  test_mappo_step_gae.py  test_prompt_render.py  test_release_contracts.py  test_role_graph.py  test_task_datasets.py
(+79 files in other folders)
