[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "c3-marl-llm"
version = "0.1.0"
description = "Reference implementation for Contextual Counterfactual Credit Assignment (C3)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "C3 Authors" }
]
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
test = [
  "pytest>=9.0",
  "datasets>=3.0",
]
dev = [
  "pytest>=9.0",
  "datasets>=3.0",
]

[tool.setuptools.packages.find]
include = ["c3*", "openrlhf*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
